# personal-ai-assitant

./: .env.example  .gitignore  README.md  index.html
docs/slides/: index.html
mcp-servers/google_workspace/: .dockerignore  Dockerfile  README.md  config.py  index.html  requirements.txt  server.py
mcp-servers/google_workspace/auth/: helpers.py  routes.py  store.py  tools.py
mcp-servers/google_workspace/docs/: configuration.md  deployment_guide.md  design_doc.md  multi_user_auth.md  tools_reference.md
mcp-servers/google_workspace/tools/: calendar.py  drive.py  gmail.py
personal-ai-assistant/: .dockerignore  Dockerfile  README.md  config.yaml  index.html  mcp_settings.json  pyproject.toml  requirements.txt
personal-ai-assistant/app/: config.py  main.py  schemas.py
personal-ai-assistant/app/agents/: __init__.py
personal-ai-assistant/app/agents/coordinator/: __init__.py  agent.py  routing.py  workspace_agent.py  workspace_instructions.py
personal-ai-assistant/app/llm/: __init__.py  fallback_gemini.py
personal-ai-assistant/app/utils/: __init__.py  logger.py  mcp.py  temporal_context.py
personal-ai-assistant/app/utils/sqlite/: db.py
personal-ai-assistant/docs/: design.md  model-fallback.md  problem-statement.md
personal-ai-assistant/mcp_config/google/calendar/: README.md  sample.env
personal-ai-assistant/scripts/: adk_web.sh  bootstrap_venv.sh  deploy_cloud_run_minimal.sh  start_mcp.sh
